--- a/todo.txt
+++ b/todo.txt
@@ -17,7 +17,7 @@
 5 verzin een grof logo (done)
 
 # klonter, of bestond die al in tree a rate
-1 zoek veld in de rank app maken !
-2 rank app page afmaken
-3 bezig met de selenium crawler
-4 bezig met de graph overview (kut werk) (iets met labels die er niet zijn !)
+1 zoek veld in de rank app maken ! <--
+2 rank app page afmaken (done ish)
+3 bezig met de selenium crawler <--
+4 bezig met de graph overview (done)
