adding more points

--- a/translations/trans-default.toml
+++ b/translations/trans-default.toml
@@ -1,3 +1,11 @@
-191234801 = [ "Unknown", "./partials/head.html",]
+202506958 = [ "App Rank", "./partials/head.html",]
 210895598 = [ "App rank", "./partials/sidenavigation.html",]
 180945613 = [ "Contact", "./partials/sidenavigation.html",]
+2387155423 = [ "You want to know how your app ranks over time on the google playstore?", "index.html",]
+2756711949 = [ "Well, here you can check the playstore app ranking over time!", "index.html",]
+3669958755 = [ "Why not have a look around and perhaps ad some search query to see if your app is in there!", "index.html",]
+191234801 = [ "Unknown", "./partials/head.html",]
+480576690 = [ "All keywords", "macros.html",]
+867304994 = [ "Your search keys", "macros.html",]
+139854453 = [ "Submit", "macros.html",]
+97124868 = [ "Reset", "macros.html",]
