--- a/todo.txt
+++ b/todo.txt
@@ -17,14 +17,14 @@
 5 verzin een grof logo (done)
 
 # klonter, of bestond die al in tree a rate
-1 zoek veld in de rank app maken ! <--
+1 zoek veld in de rank app maken ! (done)
 2 rank app page afmaken (done ish)
-3 bezig met de selenium crawler <--
+3 bezig met de selenium crawler (done)
 4 bezig met de graph overview (done)
 
 # die dingen die ook gedaam moeten woorden
-1 logo aan passen
-2 naam van de site aanpassen
-3 dns record voor de site maken
+1 logo aan passen (done)
+2 naam van de site aanpassen (done)
+3 dns record voor de site maken <--
 4 bezig met de playbook
-5 
+5
