some bits where not there, some translations, some presentation

--- a/translations/trans-default.toml
+++ b/translations/trans-default.toml
@@ -1,6 +1,8 @@
-191234801 = [ "Unknown", "./partials/head.html",]
+1669859522 = [ "Playstore rank history", "./partials/head.html",]
 210895598 = [ "App rank", "./partials/sidenavigation.html",]
 180945613 = [ "Contact", "./partials/sidenavigation.html",]
+480576690 = [ "All keywords", "./partials/head.html",]
+501482673 = [ "User profile", "./partials/head.html",]
 202506958 = [ "App Rank", "./partials/head.html",]
 2387155423 = [ "You want to know how your app ranks over time on the google playstore?", "index.html",]
 2756711949 = [ "Well, here you can check the playstore app ranking over time!", "index.html",]
