--- a/translations/trans-default.toml
+++ b/translations/trans-default.toml
@@ -1,3 +1,3 @@
-480576690 = [ "All keywords", "./partials/head.html",]
+1669859522 = [ "Playstore rank history", "./partials/head.html",]
 210895598 = [ "App rank", "./partials/sidenavigation.html",]
 180945613 = [ "Contact", "./partials/sidenavigation.html",]
