--- a/translations/trans-default.toml
+++ b/translations/trans-default.toml
@@ -1,3 +1,11 @@
 1669859522 = [ "Playstore rank history", "./partials/head.html",]
 210895598 = [ "App rank", "./partials/sidenavigation.html",]
+480576690 = [ "All keywords", "./partials/head.html",]
 180945613 = [ "Contact", "./partials/sidenavigation.html",]
+60424574 = [ "Page", "macros.html",]
+21364950 = [ "of", "macros.html",]
+191234801 = [ "Unknown", "./partials/head.html",]
+184877777 = [ "Subject", "contact.html",]
+579077391 = [ "Enter subject", "contact.html",]
+182518470 = [ "Message", "contact.html",]
+576718084 = [ "Enter message", "contact.html",]
