--- a/translations/trans-default.toml
+++ b/translations/trans-default.toml
@@ -1,5 +1,10 @@
-1669859522 = [ "Playstore rank history", "./partials/head.html",]
+202506958 = [ "App Rank", "./partials/head.html",]
 210895598 = [ "App rank", "./partials/sidenavigation.html",]
 180945613 = [ "Contact", "./partials/sidenavigation.html",]
-480576690 = [ "All keywords", "./partials/head.html",]
-764413359 = [ "Your search key", "alltrades.html",]
+2387155423 = [ "You want to know how your app ranks over time on the google playstore?", "index.html",]
+2756711949 = [ "Well, here you can check the playstore app ranking over time!", "index.html",]
+3669958755 = [ "Why not have a look around and perhaps ad some search query to see if your app is in there!", "index.html",]
+184877777 = [ "Subject", "contact.html",]
+579077391 = [ "Enter subject", "contact.html",]
+182518470 = [ "Message", "contact.html",]
+576718084 = [ "Enter message", "contact.html",]
