--- a/todo.txt
+++ b/todo.txt
@@ -41,24 +41,34 @@
 2 pagination on keywords (done)
 
 # error fix 1
-1 grafiek lijkt omgekeerd ! fix it
-2 na login lijkt het dat je nog niet ingelogt bent !
+1 grafiek lijkt omgekeerd ! fix it (done)
+2 na login lijkt het dat je nog niet ingelogt bent ! (done)
 
 # extra info
-1 app info
-1.1 woord lengte per app texten
-1.2 avg review length
-1.3 max review length
-1.4 developer website
-developer address
-adds
-inapppurchases
-movie
+1 app info (db)
+1.1 woord lengte per app texten (done)
+1.2 avg review length (done)
+1.3 max review length (done)
+1.4 developer website (done)
+1.5 developer address (done)
+1.6 adds (done)
+1.7 inapppurchases (done)
+1.8 movie (done)
 
 2 keyword info
-bijhouden van versies ?
-gemiddelde woord lengte ! per app text
+bijhouden van versies ? (done)
+gemiddelde woord lengte ! per app text (done)
+num of app with moview per x nr of apps (done)
+num of adds per nr of apps (done)
+num of in app purchases per x num of apps (done)
+
+
 average review text length
-num of app with moview per x nr of apps
-num of adds per nr of apps
-num of in app purchases per x num of apps
+bar grafiek met 10 bars waarbij iedere 10% is van de apps gerekend vanaf de top apps.
+dus van de bijvoorbeeld 10 apps in de 10% hoeveel hebben er adds
+
+hoeveel hebben er videos ?
+
+een bar graph met gemiddelde woorden voor de text !
+
+een bar graph etc.
