--- a/todo.txt
+++ b/todo.txt
@@ -81,13 +81,13 @@ macros clean (done)
 alles door de validator (done)
 
 next !
-implement bars
-kijken waar die foutmeldingen vandaankomen alles doorklikken
-keywords in de begin texten
-app details finalisen !
-aantal gecrawlde apps updaten naar 200
+implement bars (done)
+kijken waar die foutmeldingen vandaankomen alles doorklikken (done)
+keywords in de begin texten <--
+app details finalisen ! <--
 
 
 also
 fix recapcha
 add doc strings
+aantal gecrawlde apps updaten naar 200
